share/cascade/test/regression/type_check/fail/declaration_6.v
localparam x = 0;
reg x = 0;
